@@ -14,11 +14,17 @@ parser.add_option('-m', '--month', type='string', dest='month',
                   help="List games of the month")
 parser.add_option('-x', '--x-forward-for', type='string', dest='xff',
                   help="X-Forward-For header value")
+parser.add_option('-c', '--clubs', action='store_true', dest='clubs',
+                  help="List clubs")
 
 (options, args) = parser.parse_args()
 
 
 my_mls = mlslive.MLSLive()
+
+if options.clubs:
+    my_mls.getClubs()
+    sys.exit(0)
 
 if options.user != None and options.password != None:
     if not my_mls.login(options.user, options.password, options.xff):
@@ -30,13 +36,19 @@ if options.user != None and options.password != None:
 if options.game == None:
     games = my_mls.getGames(xff = options.xff)
     for game in games:
-        game_str = my_mls.getGameString(game, 'at')
+        game_str = my_mls.getGameString(game, '{1} at {0}')
         print '\t{0}) {1}'.format(game['optaId'], game_str) 
 else:
     streams = my_mls.getStreams(options.game, options.xff)
     if streams == None:
         print "Unable to get streams..."
         sys.exit(1)
+
+    print streams
+
+    # just choose the first stream for testing purposes
+    media = streams[0]
+    streams = my_mls.getStreamURIs(media, options.xff)
     for stream in streams.keys():
         print stream + ' ' + streams[stream]
 sys.exit(0)
